build: adjusted scripts in package json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-story-component",
-  "version": "0.0.81",
+  "version": "0.0.90",
   "main": "dist/index.js",
   "module": "dist/index.d.js",
   "files": [
@@ -21,9 +21,8 @@
     "prettier": "prettier --write \"src/**/*.{ts,tsx}\""
   },
   "dependencies": {
-    "@react-native-community/blur": "^4.4.0",
-    "path": "^0.12.7",
-    "react-native-syntax-highlighter": "^2.1.0",
+    "@react-native-community/blur": "4.4.0",
+    "react-native-syntax-highlighter": "2.1.0",
     "styled-components": "6.0.7"
   },
   "peerDependencies": {
